--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 certifi==2020.6.20
+coverage==5.3
 cycler==0.10.0
 joblib==0.16.0
 kiwisolver==1.2.0
-matplotlib==3.3.1
-numpy==1.19.1
-pandas==1.1.0
+matplotlib==3.3.2
+numpy==1.19.2
+pandas==1.1.2
 patsy==0.5.1
 Pillow==7.2.0
 pyparsing==2.4.7
@@ -14,5 +15,5 @@ scikit-learn==0.23.2
 scipy==1.5.2
 six==1.15.0
 sklearn==0.0
-statsmodels==0.11.1
+statsmodels==0.12.0
 threadpoolctl==2.1.0
