--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -10,9 +10,12 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.6
+    - name: Install Wheel
+      run: >-
+        pip install wheel --user
     - name: Build a binary wheel and a source tarball
       run: >-
-        python3 setup.py sdist bdist_wheel
+        python setup.py sdist bdist_wheel
     - name: Publish to Test PyPI
       uses: pypa/gh-action-pypi-publish@master
       with:
