--- a/.travis.yaml
+++ b/.travis.yaml
@@ -3,11 +3,11 @@ python:
     - "3.6"
 
 install:
-    pip install -r requirements.txt
+    "pip install -r requirements.txt"
 
 script:
-    - coverage run -m --source=PyALE unittest discover -v
+    - "coverage run -m --source=PyALE unittest discover -v"
 
 
 after_success:
-    - codecov
+    codecov
