--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -3,13 +3,13 @@ on: push
 jobs:
   build-n-publish:
     name: Build and publish PyALE to TestPyPI
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: Set up Python 3.6
+    - name: Setup Python 3.10
       uses: actions/setup-python@v1
       with:
-        python-version: 3.6
+        python-version: 3.10
     - name: Install Wheel
       run: >-
         pip install wheel --user
