--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -11,7 +11,7 @@ jobs:
           with:
             python-version: '3.10'
         - name: Generate Report
-          run: >-
+          run: |
             pip install -r requirements.txt
             coverage run -m --source=PyALE unittest discover -v
         - name: Upload Coverage to Codecov
