--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -21,6 +21,8 @@ jobs:
   build-n-publish:
     name: Build and publish PyALE to TestPyPI
     runs-on: ubuntu-latest
+    needs:
+      - test-coverage
     permissions:
         # IMPORTANT: this permission is mandatory for trusted publishing
         id-token: write
