rename action file and make the names in it more descriptive

--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -18,7 +18,7 @@ jobs:
           uses: codecov/codecov-action@v2
           with:
             token: ${{ secrets.CODECOV_TOKEN }}
-  build-n-publish:
+  publish-to-PyPi:
     name: Build and publish PyALE to TestPyPI
     runs-on: ubuntu-latest
     needs:
