--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -46,3 +46,15 @@ jobs:
     - name: Publish to PyPI with new tag
       if: startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@release/v1
+  publish-to-conda:
+    runs-on: ubuntu-latest
+    needs:
+      - test-coverage
+    steps:
+    - uses: actions/checkout@v1
+    - name: publish-to-conda
+      if: startsWith(github.ref, 'refs/tags')
+      uses: maxibor/conda-package-publish-action@v1.1
+      with:
+        subDir: 'conda'
+        AnacondaToken: ${{ secrets.ANACONDA_TOKEN }}
