--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -54,7 +54,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: Create meta.yaml file
       run: |
-        conda install -c conda-forge grayskull
+        conda install conda=23.7.2
+        conda install -y -c conda-forge grayskull
         grayskull pypi --strict-conda-forge PyALE
         mv PyALE conda
     - name: publish-to-conda
