--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -52,14 +52,10 @@ jobs:
       - test-coverage
     steps:
     - uses: actions/checkout@v1
-    - name: Create meta.yaml file
-      run: |
-        conda install conda=23.7.2
-        conda install -y -c conda-forge grayskull
-        grayskull pypi --strict-conda-forge PyALE
-        mv PyALE conda
     - name: publish-to-conda
-      uses: maxibor/conda-package-publish-action@v1.1
+      uses: MichaelsJP/conda-package-publish-action@v1.0.0
       with:
-        subDir: 'conda'
+        subDir: '.conda'
         AnacondaToken: ${{ secrets.ANACONDA_TOKEN }}
+        override: true
+        dry_run: true
