use square brackets instead of get method

--- a/.conda/meta.yaml
+++ b/.conda/meta.yaml
@@ -17,7 +17,7 @@ build:
 
 requirements:
   build:
-    {% for package in data.get('setup_requires', {}) %}
+    {% for package in data['setup_requires'] %}
       - {{ package.lower() }}
     {% endfor %}
   run:
